feat: register alias to entity

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "_moduleAliases": {
     "@shared": "./src/shared",
-    "@user": "./src/user"
+    "@user": "./src/user",
+    "@entity": "./src/entity/"
   }
 }
