--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "husky": "^8.0.0",
     "lint-staged": "15.2.0",
     "module-alias": "^2.2.3",
-    "nodemon": "3.0.2",
+    "nodemon": "3.1.4",
     "prettier": "3.1.1",
     "ts-node": "10.9.2",
     "tsc-alias": "1.8.8",
@@ -67,6 +67,6 @@
   "_moduleAliases": {
     "@shared": "./src/shared",
     "@user": "./src/user",
-    "@entity": "./src/entity/"
+    "@entity": "./src/entity"
   }
 }
