--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "uuid": "9.0.1"
   },
   "dependencies": {
+    "@fastify/cors": "9.0.1",
     "@mikro-orm/core": "6.3.0",
     "@mikro-orm/migrations": "6.3.0",
     "@mikro-orm/postgresql": "6.3.0",
