fix: add new conditional to allow request when origin is undefined and enviroment is development

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ DATABASE_PORT=5432
 DATABASE_USER="some_username"
 DATABASE_PASS="some_password"
 DATABASE_NAME="some_database_name"
+
+# Environment
+NODE_ENV=development
