feat: install vitest

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "nodemon": "3.1.4",
     "prettier": "3.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "2.0.5"
   },
   "dependencies": {
     "@fastify/cors": "9.0.1",
