--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Environment
+NODE_ENV=development
+
 # Server variables
 SERVER_PORT=8080
 
@@ -7,3 +10,9 @@ DATABASE_PORT=5432
 DATABASE_USER="some_username"
 DATABASE_PASS="some_password"
 DATABASE_NAME="some_database_name"
+
+TEST_DB_NAME=test_db
+TEST_DB_USER=test_user
+TEST_DB_PASSWORD=test_password
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5433
