chore: modify .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
-# Environment
+# ########### ENVIRONMENT ########### #
 NODE_ENV=development
 
-# Server variables
+# ######### SERVER SETTINGS ######### #
 SERVER_PORT=8080
 
-# Database variables
+# ######## DATABASE SETTINGS ######## #
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER="some_username"
 DATABASE_PASS="some_password"
 DATABASE_NAME="some_database_name"
 
-TEST_DB_NAME=test_db
-TEST_DB_USER=test_user
-TEST_DB_PASSWORD=test_password
-TEST_DB_HOST=localhost
-TEST_DB_PORT=5433
+# ########## TEST SETTINGS ########## #
+TEST_DATABASE_PORT=5433
+TEST_DATABASE_USER=test_user
+TEST_DATABASE_PASS=test_password
+TEST_DATABASE_HOST=localhost
+TEST_DATABASE_PORT=5433
