--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,20 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  database-test:
+    image: postgres:16.2-alpine3.19
+    restart: always
+    environment:
+      POSTGRES_USER: ${TEST_DATABASE_USER}
+      POSTGRES_PASSWORD: ${TEST_DATABASE_PASS}
+      POSTGRES_DB: ${TEST_DATABASE_NAME}
+    ports:
+      - '${TEST_DATABASE_PORT}:5432'
+    volumes:
+      - pgdata-test:/var/lib/postgresql/data
+
 volumes:
   pgdata:
+    driver: local
+  pgdata-test:
     driver: local
