chore: little changes on .env.example and docker compose

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,6 @@ DATABASE_NAME="some_database_name"
 # ########## TEST SETTINGS ########## #
 TEST_DATABASE_NAME=:memory:
 TEST_DATABASE_PORT=5433
-TEST_DATABASE_USER=test_user
-TEST_DATABASE_PASS=test_password
-TEST_DATABASE_HOST=localhost
+TEST_DATABASE_USER="test_user"
+TEST_DATABASE_PASS="test_password"
+TEST_DATABASE_HOST="localhost"
