--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "argon2": "0.40.3",
     "bcrypt": "5.1.1",
     "dotenv": "16.3.1",
+    "env-var": "7.5.0",
     "fastify": "4.28.0",
     "reflect-metadata": "0.2.2",
     "rimraf": "5.0.5",
