--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "dependencies": {
     "@fastify/cors": "9.0.1",
+    "@fastify/swagger": "8.15.0",
+    "@fastify/swagger-ui": "4.0.1",
     "@mikro-orm/core": "6.3.0",
     "@mikro-orm/migrations": "6.3.0",
     "@mikro-orm/postgresql": "6.3.0",
