--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=development
 
 # ######### SERVER SETTINGS ######### #
 SERVER_PORT=8080
+SERVER_HOST=localhost
 
 # ######## DATABASE SETTINGS ######## #
 DATABASE_HOST=localhost
