--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@commitlint/config-conventional": "18.4.3",
     "@mikro-orm/cli": "6.3.0",
     "@types/bcrypt": "5.0.2",
+    "@types/jsonwebtoken": "9.0.6",
     "@types/module-alias": "2.0.4",
     "@types/node": "20.10.5",
     "@types/uuid": "9.0.7",
@@ -65,6 +66,7 @@
     "dotenv": "16.3.1",
     "env-var": "7.5.0",
     "fastify": "4.28.0",
+    "jsonwebtoken": "9.0.2",
     "reflect-metadata": "0.2.2",
     "rimraf": "5.0.5",
     "uuid": "9.0.1",
