--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: always
     depends_on:
-      database:
-        condition: service_started
-    # restart: always
+      - database
     ports:
       - '8080:8080'
     environment:
