--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "migration:create": "pnpm run mikro-orm migration:create",
     "migration:up": "pnpm run mikro-orm migration:up",
     "migration:fresh": "pnpm run mikro-orm migration:fresh"
-
   },
   "keywords": [],
   "author": "Figarillo",
@@ -56,6 +55,7 @@
     "vitest": "2.0.5"
   },
   "dependencies": {
+    "@fastify/auth": "4.6.1",
     "@fastify/cors": "9.0.1",
     "@fastify/swagger": "8.15.0",
     "@fastify/swagger-ui": "4.0.1",
