feat: add env vars

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ TEST_DATABASE_PORT=5433
 TEST_DATABASE_USER="test_user"
 TEST_DATABASE_PASS="test_password"
 TEST_DATABASE_HOST="localhost"
+
+# ########### JWT SETTINGS ########## #
+ACCESS_TOKEN=secret
+REFRESH_TOKEN=secret
+ACCESS_TOKEN_EXPIRES_IN=10m
+REFRESH_TOKEN_EXPIRES_IN=7d
