--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types", "types"],
     /* Projects */
     "incremental": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
@@ -39,6 +40,6 @@
     /* Completeness */
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "types"],
   "exclude": ["node_modules"]
 }
