--- a/src/migrations/.snapshot-app_db.json
+++ b/src/migrations/.snapshot-app_db.json
@@ -45,6 +45,16 @@
           "length": 255,
           "mappedType": "string"
         },
+        "email": {
+          "name": "email",
+          "type": "varchar(255)",
+          "unsigned": false,
+          "autoincrement": false,
+          "primary": false,
+          "nullable": false,
+          "length": 255,
+          "mappedType": "string"
+        },
         "description": {
           "name": "description",
           "type": "text",
@@ -83,6 +93,22 @@
           "nullable": false,
           "length": 255,
           "mappedType": "string"
+        },
+        "role": {
+          "name": "role",
+          "type": "text",
+          "unsigned": false,
+          "autoincrement": false,
+          "primary": false,
+          "nullable": false,
+          "enumItems": [
+            "entity",
+            "neighbor",
+            "responsible",
+            "rewardPartner",
+            "admin"
+          ],
+          "mappedType": "enum"
         }
       },
       "name": "entity_entity",
@@ -94,6 +120,16 @@
           ],
           "composite": false,
           "keyName": "entity_entity_name_unique",
+          "constraint": true,
+          "primary": false,
+          "unique": true
+        },
+        {
+          "columnNames": [
+            "email"
+          ],
+          "composite": false,
+          "keyName": "entity_entity_email_unique",
           "constraint": true,
           "primary": false,
           "unique": true
