feat: update migrations

--- a/src/migrations/.snapshot-app_db.json
+++ b/src/migrations/.snapshot-app_db.json
@@ -527,6 +527,22 @@
           "nullable": false,
           "length": 255,
           "mappedType": "string"
+        },
+        "role": {
+          "name": "role",
+          "type": "text",
+          "unsigned": false,
+          "autoincrement": false,
+          "primary": false,
+          "nullable": false,
+          "enumItems": [
+            "entity",
+            "neighbor",
+            "responsible",
+            "rewardPartner",
+            "admin"
+          ],
+          "mappedType": "enum"
         }
       },
       "name": "reward_partner_entity",
